# chessboarddetector

./: .gitignore  README.md  pyproject.toml
scripts/: smoke_test.py
src/chessboarddetector/: __init__.py  cli.py  detector.py  render.py
src/chessboarddetector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
