[project]
name = "chessboarddetector"
version = "0.1.0"
description = "Pure computer-vision chessboard detector that overlays an 8x8 grid."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.scripts]
chessboarddetector = "chessboarddetector.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
